--- a/frontend/cmd/server/templates/base.gohtml
+++ b/frontend/cmd/server/templates/base.gohtml
@@ -53,7 +53,7 @@
               <a class="{{if eq .Path "/" }}text-primary{{end}} hover:underline" href="/">Home</a>
               <a id="nav-auth" class="{{if eq .Path "/auth" }}text-primary{{end}} hover:underline" href="/auth">Auth</a>
               <a class="{{if eq .Path "/playlists" }}text-primary{{end}} hover:underline" href="/playlists">Playlists</a>
-              <a class="{{if eq .Path "/event" }}text-primary{{end}} hover:underline" href="/event">Event</a>
+              <a class="{{if eq .Path "/events" }}text-primary{{end}} hover:underline" href="/events">Events</a>
               <a id="nav-me" class="{{if eq .Path "/me" }}text-primary{{end}} hover:underline" href="/me" style="display: none;">Me</a>
               <a id="nav-friends" class="hover:underline" href="/friends" style="display: none;">Friends</a>
               <a id="nav-logout" class="hover:underline" href="#" style="display: none;">Logout</a>
