--- a/frontend/cmd/server/templates/base.gohtml
+++ b/frontend/cmd/server/templates/base.gohtml
@@ -114,7 +114,7 @@
         document.body.addEventListener('htmx:afterSettle', updateHeader);
       </script>
 
-      <main id="main-content" class="max-w-5xl mx-auto px-4 py-6">
+      <main id="main-content" class="max-w-5xl mx-auto px-4 py-6 pb-32">
         {{ template "content" . }}
       </main>
     </div>
